--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         </p>
                         <div>
                             <a class="btn btn-yellow mt-4 mr-3">
-                                Ver Cardápio
+                                <b>Ver Cardápio</b>
                             </a>
                             <a href="#" class="btn btn-white btn-icon-left mt-4">
                                 <span class="icon-left">
@@ -346,7 +346,7 @@
                                     Reserve sua data e horário de forma simples e rápida.
                                 </p>
                                 <a class="btn btn-yellow mt-4">
-                                    Fazer reserva
+                                    <b>Fazer reserva</b>
                                 </a>
                             </div>
                             <div class="col-5">
@@ -370,7 +370,7 @@
                 </div>
                 <div class="col-6 container-texto-footer">
                     <p class="mb-0">
-                        <b>Menu On-Line</b> &copy; Todos os direitos reservados "Lemos"
+                        <b>Menu On-Line</b> &copy; Todos os direitos reservados "Dev Lemos"
                     </p>
                 </div>
                 <div class="col-3 container-redes-footer">
@@ -562,7 +562,7 @@
                 <a onclick="cardapio.metodos.resumoPedido()" class="btn btn-yellow float-right hidden" id="btnEtapaEndereco">
                     Revisar pedido
                 </a>
-                <a class="btn btn-yellow float-right hidden" id="btnEtapaResumo">
+                <a href="#" class="btn btn-yellow float-right hidden" id="btnEtapaResumo" target="_blank">
                     Enviar pedido
                 </a>
 
